[package]
name = "go-concurrency-patterns-in-rust"
version = "0.1.0"
authors = ["Dan Munckton <dangit@munckfish.net>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
chan = "0.1.23"
futures = "0.3.1"
futures-cpupool = "0.1.5"
async-std = "1.0.1"
crossbeam-utils = "0.7.0"
crossbeam-channel = "0.4.0"
